--- a/videoRecorder/Base.lproj/Main.storyboard
+++ b/videoRecorder/Base.lproj/Main.storyboard
@@ -1,24 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="videoRecorder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="linkColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="89.855072463768124" y="45.535714285714285"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="wxX-F6-KBc">
+            <objects>
+                <viewController storyboardIdentifier="showPhoto" useStoryboardIdentifierAsRestorationIdentifier="YES" id="TGq-TJ-VKc" customClass="ImageViewController" customModule="videoRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4bf-Wk-g94">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="owO-4O-Iz2">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="JNR-ZK-EcH"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="owO-4O-Iz2" firstAttribute="top" secondItem="JNR-ZK-EcH" secondAttribute="top" id="Due-or-7VO"/>
+                            <constraint firstItem="JNR-ZK-EcH" firstAttribute="bottom" secondItem="owO-4O-Iz2" secondAttribute="bottom" id="Zgc-nQ-7eH"/>
+                            <constraint firstItem="JNR-ZK-EcH" firstAttribute="trailing" secondItem="owO-4O-Iz2" secondAttribute="trailing" id="mM7-NE-kwM"/>
+                            <constraint firstItem="owO-4O-Iz2" firstAttribute="leading" secondItem="JNR-ZK-EcH" secondAttribute="leading" id="wc7-2L-wsP"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ZcR-YK-rqT"/>
+                    <connections>
+                        <outlet property="imageViewController" destination="owO-4O-Iz2" id="p3a-2X-6fx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dac-fg-gzL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1059" y="92"/>
+        </scene>
+        <!--Video View Controller-->
+        <scene sceneID="UKL-Ph-ovb">
+            <objects>
+                <viewController storyboardIdentifier="VideoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Zr2-uv-Hf1" customClass="VideoViewController" customModule="videoRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ior-lV-WnG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Qt-7d-Nbl">
+                                <rect key="frame" x="20" y="44" width="69" height="61"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="cancel" translatesAutoresizingMaskIntoConstraints="NO" id="QIV-hd-Ejz">
+                                        <rect key="frame" x="5" y="5" width="59" height="51"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggX-Fp-cPR">
+                                        <rect key="frame" x="0.0" y="0.0" width="69" height="61"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="cancelVideo:" destination="Zr2-uv-Hf1" eventType="touchUpInside" id="oj2-Yb-hon"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="QIV-hd-Ejz" secondAttribute="bottom" constant="5" id="0N5-cJ-e6A"/>
+                                    <constraint firstItem="ggX-Fp-cPR" firstAttribute="top" secondItem="8Qt-7d-Nbl" secondAttribute="top" id="8VB-4Q-CYR"/>
+                                    <constraint firstItem="QIV-hd-Ejz" firstAttribute="top" secondItem="8Qt-7d-Nbl" secondAttribute="top" constant="5" id="UOn-rS-X31"/>
+                                    <constraint firstAttribute="trailing" secondItem="QIV-hd-Ejz" secondAttribute="trailing" constant="5" id="YOg-wJ-54S"/>
+                                    <constraint firstAttribute="trailing" secondItem="ggX-Fp-cPR" secondAttribute="trailing" id="hGH-lh-eW1"/>
+                                    <constraint firstItem="ggX-Fp-cPR" firstAttribute="leading" secondItem="8Qt-7d-Nbl" secondAttribute="leading" id="j3Z-nE-J9b"/>
+                                    <constraint firstItem="QIV-hd-Ejz" firstAttribute="leading" secondItem="8Qt-7d-Nbl" secondAttribute="leading" constant="5" id="u3w-Pz-Pgh"/>
+                                    <constraint firstAttribute="bottom" secondItem="ggX-Fp-cPR" secondAttribute="bottom" id="xgA-2F-Ecw"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vil-lb-hml">
+                                <rect key="frame" x="10" y="692" width="60" height="60"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="upload" translatesAutoresizingMaskIntoConstraints="NO" id="9FB-oP-dSO">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yP-Ci-NSq">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="btn_uploadVideo:" destination="Zr2-uv-Hf1" eventType="touchUpInside" id="YM5-ps-iJ6"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="3yP-Ci-NSq" secondAttribute="bottom" id="0cQ-V1-YY7"/>
+                                    <constraint firstItem="3yP-Ci-NSq" firstAttribute="leading" secondItem="Vil-lb-hml" secondAttribute="leading" id="1YJ-to-E7P"/>
+                                    <constraint firstAttribute="trailing" secondItem="3yP-Ci-NSq" secondAttribute="trailing" id="3Y5-fa-Igh"/>
+                                    <constraint firstItem="9FB-oP-dSO" firstAttribute="leading" secondItem="Vil-lb-hml" secondAttribute="leading" id="Y9Y-Qd-bcs"/>
+                                    <constraint firstItem="9FB-oP-dSO" firstAttribute="top" secondItem="Vil-lb-hml" secondAttribute="top" id="gSD-nN-iGj"/>
+                                    <constraint firstAttribute="bottom" secondItem="9FB-oP-dSO" secondAttribute="bottom" id="gYM-wk-dCN"/>
+                                    <constraint firstItem="3yP-Ci-NSq" firstAttribute="top" secondItem="Vil-lb-hml" secondAttribute="top" id="iiF-34-arT"/>
+                                    <constraint firstAttribute="height" constant="60" id="pRZ-AF-Jgt"/>
+                                    <constraint firstAttribute="width" constant="60" id="rH1-Wo-rSY"/>
+                                    <constraint firstAttribute="trailing" secondItem="9FB-oP-dSO" secondAttribute="trailing" id="rUq-m6-xIG"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="78V-Fq-aju"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8Qt-7d-Nbl" firstAttribute="height" secondItem="ior-lV-WnG" secondAttribute="height" multiplier="0.0680804" id="89g-jx-iJU"/>
+                            <constraint firstItem="8Qt-7d-Nbl" firstAttribute="width" secondItem="ior-lV-WnG" secondAttribute="width" multiplier="0.166667" id="IfO-ht-8YN"/>
+                            <constraint firstItem="8Qt-7d-Nbl" firstAttribute="leading" secondItem="78V-Fq-aju" secondAttribute="leading" constant="20" id="LVI-Dy-Dwh"/>
+                            <constraint firstItem="Vil-lb-hml" firstAttribute="leading" secondItem="78V-Fq-aju" secondAttribute="leading" constant="10" id="RaP-Xa-AP3"/>
+                            <constraint firstItem="8Qt-7d-Nbl" firstAttribute="top" secondItem="78V-Fq-aju" secondAttribute="top" id="dJt-An-rfQ"/>
+                            <constraint firstItem="78V-Fq-aju" firstAttribute="bottom" secondItem="Vil-lb-hml" secondAttribute="bottom" constant="110" id="tCq-Oh-w3k"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="cancelButton" destination="8Qt-7d-Nbl" id="bid-9x-heN"/>
+                        <outlet property="playerView" destination="ior-lV-WnG" id="6NY-O8-3ce"/>
+                        <outlet property="uploadButton" destination="Vil-lb-hml" id="INy-2O-rdN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zWu-Qt-eHK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1847.826086956522" y="67.633928571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cancel" width="512" height="512"/>
+        <image name="upload" width="512" height="512"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
